# VTFLib

./: .gitmodules  CMakeLists.txt  README.md
VTFCmd/: CMakeLists.txt  stdafx.h  vtfcmd.c
VTFEdit/: CMakeLists.txt  CVTFEdit.resX  VTFEdit.h  VTFFileUtility.h  VTFOptions.h  stdafx.h
VTFLib/: CMakeLists.txt  Enumerations.cpp  VMTWrapper.h  VTFFile.cpp  VTFFile.h  VTFFormat.h  VTFLib.cpp  VTFLib.h  stdafx.h
